# cinematacms

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  content_moderation.md  docker-compose.dev.yml  docker-compose.yml  install-nodejs.sh  install.sh  push-public.sh  pyproject.toml  requirements.txt  restart_script.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: cinemata-developer-eoi.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: dependabot-check.yml
cms/: context_processors.py  dev_settings.py  local_settings_example.py  middleware.py  permissions.py  settings.py  settings_utils.py  tests.py  urls.py
deploy/: celery_beat.service  celery_long.service  celery_short.service  celery_whisper.service  dev-cinemata.conf  mediacms.io  upload-subdomain.conf
deploy/docker/: entrypoint.sh  local_settings.py  nginx_http_only.conf  prestart.sh  start.sh  uwsgi.ini
docs/: CONTRIBUTING.md  Customise-social-media-links.md  Media_Viewing_Experience_and_Controls.md  automatic_transcription.md  backup_and_recovery_procedures.md  content_moderation.md  content_moderation_workflow.md  creating_superuser.md  directory.md  hsts-security.md  index.md  mac-setup-docker.md  mac_setup.md  makefile-and-uv.md  media-processing-pipeline-docu.md  media_upload_workflow.md  metadata_best_practices.md  mobile_interface.md  navigation_map.md  performance-and-engagement.md  performance_monitoring.md  permission_system.md  playlist_management.md  security_best_practices.md  system_monitoring_and_optimization.md  tech-preparations-video-uploads.md  ubuntu-22.04-setup.md  ubuntu-22.04_setup  user_management.md  video_preparation.md  visual_walkthrough.md
docs/API endpoints/: media-endpoints.md  playlist-endpoints.md  user-endpoints.md
docs/Developer Extension Guides/: embeded-configuration-module.md  extension-architecture.md  media-configuration-module.md  notification-confirguration-module.md  pages-configuration-module.md  taxonomies-configuration-module.md  taxonomies-confirguration-module.md  theme-configuration-module.md
docs/Technical Documentation/: intro-media-processing-pipeline-docu.md  upload-process.md  video-processing-overview.md
docs/admin-guides/: backup_and_recovery_procedures.md  cinematacms-roles-permission-matrix.md  languages.md  troubleshooting_guide.md  user_management.md
docs/customization/: frontend-development.md  sidebar-content-guide.md
docs/features/: tinymce.md
docs/guides/: Post-installation-guide.md  cinemata_user_guide.md  mfa_authentication.md  subtitle_caption_guide.md  troubleshooting_guide.md
docs/security/: mfa_authentication.md  secure-file-serving.md  security_best_practices.md
docs/setup/: mac-setup-docker.md  mac_setup.md  makefile-and-uv.md  ubuntu-22.04-setup.md  upload-subdomain-setup.md
docs/technical/: FRONTEND_WORKFLOW.md  permission-caching.md  tinymce.md
docs/user-guides/: playlist_management.md  visual_walkthrough.md
docs/🌐 features/: Cinemata_Accessibility_Keyboard_Shortcuts.md  mobile_interface.md
docs/👤 user-guides/: cinemata_user_guide.md
files/: admin.py  backends.py  cache_utils.py  context_processors.py  feeds.py  forms.py  helpers.py  lists.py  methods.py  models.py  secure_media_views.py  tasks.py  tinymce_handlers.py  urls.py  views.py
fixtures/: apac_languages.json
frontend/: PERFORMANCE.md  README.md  package-lock.json  package.json
scripts/: build_frontend.sh
static/css/: _commons.css  (+7 more)
templates/: 404.html  503.html  root.html
tests/: test_index_page_featured.py
uploader/: middleware.py  tests.py  urls.py  views.py
users/: adapter.py  middleware.py  tests.py  urls.py  validators.py
(+151 files in other folders)
