[project]
name = "cinemata"
version = "1.0.0"
description = "An open-source project wrapper of MediaCMS tailor-fit to showcasing films centered around social issues within the Asia-Pacific region."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery==4.4.7",
    "django-allauth==65.7.0",
    "django-celery-email",
    "django-ckeditor==6.6.1",
    "django-cors-headers",
    "django-crispy-forms==1.9.0",
    "django-debug-toolbar==4.1.0",
    "django-filter",
    "django-imagekit==5.0.0",
    "django-mptt==0.16.0",
    "django-recaptcha==3.0.0",
    "django-redis==4.12.1",
    "django-silk",
    "django==5.2",
    "djangorestframework==3.15.2",
    "psycopg2-binary==2.9.10",
    "filetype",
    "flake8",
    "ipython",
    "m3u8",
    "markdown",
    "pep8",
    "pillow==9.5.0",
    "python-dotenv>=1.0.1",
    "requests",
    "rpdb",
    "tqdm",
    "whitenoise",
    "fido2",
    "uwsgi",
    "qrcode"
]
